updated the file

--- a/English-to-French-Translator.ipynb
+++ b/English-to-French-Translator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:37.331193Z",
@@ -19,7 +19,11 @@
    "outputs": [],
    "source": [
     "import re\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.layers import Dense, Input, Embedding, LSTM\n"
    ]
   },
   {
@@ -31,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:37.338147Z",
@@ -41,6 +45,13 @@
    "outputs": [],
    "source": [
     "def fetch_data(data_path):\n",
+    "    \"\"\" \n",
+    "    This function will fetch the dataset with 'utf-8' encoding, \n",
+    "    separate the source (en) and target (fr) language.\n",
+    "    \n",
+    "    input: path of the dataset txt file\n",
+    "    output: list of all English text, list of corresponding French text\n",
+    "    \"\"\"\n",
     "    with open(data_path, 'r', encoding='utf-8') as f:\n",
     "        lines = f.read().split('\\n')\n",
     "    en_text = []\n",
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:37.536645Z",
@@ -66,20 +77,6 @@
    "source": [
     "DATA_PATH = r'datasets/French-English/fra.txt'\n",
     "en_text, fr_text = fetch_data(DATA_PATH)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-19T21:04:37.540603Z",
-     "start_time": "2020-08-19T21:04:37.537644Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# en_text[:10]"
    ]
   },
   {
@@ -115,8 +112,12 @@
    "outputs": [],
    "source": [
     "def text_clean(text):\n",
-    "    \"\"\" Function to clean the text before training\n",
+    "    \"\"\" \n",
+    "    Function to clean the text before training.\n",
+    "    input: text single line\n",
+    "    output: cleaned text line\n",
     "    \"\"\"\n",
+    "    \n",
     "    text = text.lower()\n",
     "    \n",
     "    # Replace the short words in there expanded forms\n",
@@ -125,7 +126,6 @@
     "    \n",
     "    # remove all non essential charachters\n",
     "    text = re.sub(r\"[-{}\\\"#/@;:<>()+=|.?,%$!]\",\"\", text)\n",
-    "    \n",
     "    text = re.sub(r\"[0-9]\",\"\", text)\n",
     "    \n",
     "    # Remove outside spaces\n",
@@ -145,20 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "clean_en_text = [text_clean(text) for text in en_text]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-19T21:04:38.992045Z",
-     "start_time": "2020-08-19T21:04:38.230508Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "clean_en_text = [text_clean(text) for text in en_text]\n",
     "clean_fr_text = [text_clean(text) for text in fr_text]"
    ]
   },
@@ -166,12 +153,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Data Formating"
+    "### Step 3. Data Formating"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:38.996002Z",
@@ -180,12 +167,13 @@
    },
    "outputs": [],
    "source": [
+    "# Adding tokens to identify the start and end of TARGET language\n",
     "tokens = ['<SOS>', '<PAD>', '<EOS>']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.168540Z",
@@ -199,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.173552Z",
@@ -213,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.389948Z",
@@ -227,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.393960Z",
@@ -241,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.430838Z",
@@ -256,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.469734Z",
@@ -271,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.536600Z",
@@ -287,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.540545Z",
@@ -302,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.613379Z",
@@ -316,7 +304,7 @@
        "44"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.714081Z",
@@ -342,7 +330,7 @@
        "57"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.719104Z",
@@ -368,7 +356,7 @@
        "['go', 'hi', 'hi', 'run', 'run']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:39.726049Z",
@@ -397,7 +385,7 @@
        " '<SOS> courez <EOS>']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:40.658265Z",
@@ -437,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:41.746627Z",
@@ -452,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:41.755525Z",
@@ -472,7 +460,7 @@
        "       [ 6496, 12010, 14395, ...,     5,  8471, 12093]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:41.763501Z",
@@ -497,7 +485,7 @@
        "(177210, 44)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:41.771479Z",
@@ -528,7 +516,7 @@
        "       [29594, 24969, 21542, ..., 15256, 17950, 29596]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-19T21:04:41.777463Z",
@@ -553,7 +541,7 @@
        "(177210, 57)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,6 +549,177 @@
    "source": [
     "pad_fr_text.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4. Data preperation for model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(pad_en_text, pad_fr_text, test_size=0.20, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((141768, 44), (35442, 44))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# def data_batch_generator(X,y):\n",
+    "max_en_seq_length"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 5. Model Building"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_dim = 50\n",
+    "en_vocab_len = len(en_vocab)\n",
+    "fr_vocab_len = len(fr_vocab)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Encoder States"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LAYERS\n",
+    "encoder_input = Input(shape =(X_train.shape[1]))\n",
+    "encoder_embedding_layer = Embedding(en_vocab_len , embedding_dim,input_length= max_en_seq_length)\n",
+    "encoder_lstm_layer = LSTM(50, return_state = True )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OUTPUTS\n",
+    "encoder_embedding_output = encoder_embedding_layer(encoder_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder_seq_output, encoder_memory_state, encoder_carry_state = encoder_lstm_layer(encoder_embedding_output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Encoder Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Model(input=(encoder_input), output = (encoder_seq_output))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
