--- a/English-to-French-Translator.ipynb
+++ b/English-to-French-Translator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-20T20:31:28.637127Z",
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-20T20:31:38.884556Z",
@@ -588,7 +588,7 @@
        "((141768, 44), (141768, 57))"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-20T20:32:00.680026Z",
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-20T20:33:28.562993Z",
@@ -754,7 +754,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_2\"\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-20T21:08:32.973888Z",
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-20T21:08:35.243924Z",
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-20T21:08:35.800085Z",
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-20T21:08:37.507218Z",
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-20T21:08:39.040411Z",
@@ -915,7 +915,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_3\"\n",
+      "Model: \"model_1\"\n",
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
@@ -933,7 +933,7 @@
       "                                                                 lstm[0][1]                       \n",
       "                                                                 lstm[0][2]                       \n",
       "__________________________________________________________________________________________________\n",
-      "dense_1 (Dense)                 (None, 57, 29597)    1509447     lstm_1[1][0]                     \n",
+      "dense (Dense)                   (None, 57, 29597)    1509447     lstm_1[0][0]                     \n",
       "==================================================================================================\n",
       "Total params: 3,766,097\n",
       "Trainable params: 3,766,097\n",
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-20T21:13:47.067848Z",
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-20T21:15:49.766481Z",
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,26 +1014,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "WARNING:tensorflow:From C:\\Users\\Asus\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\ops\\math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "   1/2215 [..............................] - ETA: 31:51:48 - loss: 10.1137 - acc: 0.0000e+00"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "history = model.fit(batch_data_generator(X_train, y_train,batch_size), \n",
-    "                    steps_per_epoch = steps_per_epoch,\n",
-    "                    epochs=epochs,\n",
-    "                    verbose = 2)"
+    "# history = model.fit(batch_data_generator(X_train, y_train,batch_size), \n",
+    "#                     steps_per_epoch = steps_per_epoch,\n",
+    "#                     epochs=epochs,\n",
+    "#                     verbose = 2)"
    ]
   },
   {
